Letter spacing fixes

--- a/css/style.css
+++ b/css/style.css
@@ -468,6 +468,10 @@ body {
 
 
 /* ALL BUTTONS */
+button {
+  letter-spacing: 1px;
+}
+
 .signup-in-button {
   width: 100%;
   padding: 0.9em;
